--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "installJest": "yarn add jest @babel/core @babel/cli @babel/preset-env --dev",
     "installCoreJs": "yarn add core-js@3",
     "instalEsLint": "yarn add eslint eslint-config-airbnb-base --dev",
+    "installEslintYarn": "yarn add eslint eslint-plugin-import eslint-config-airbnb-base --dev",
     "installPuppeteer": "yarn add puppeteer@10.0.0 --dev",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
@@ -29,6 +30,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
