--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "puppeteer": "10.0.0",
+    "puppeteer": "^20.5.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.3",
     "webpack-dev-server": "^4.15.0"
