--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "installCoreJs": "yarn add core-js@3",
     "instalEsLint": "yarn add eslint eslint-config-airbnb-base --dev",
     "installEslintYarn": "yarn add eslint eslint-plugin-import eslint-config-airbnb-base --dev",
-    "installPuppeteer": "yarn add puppeteer@10.0.0 --dev",
+    "installPuppeteer": "yarn add puppeteer@19.4.0 --dev",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
@@ -35,7 +35,7 @@
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "puppeteer": "^20.5.0",
+    "puppeteer": "19.4.0",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.3",
     "webpack-dev-server": "^4.15.0"
